--- a/AnPriX/backend/package.json
+++ b/AnPriX/backend/package.json
@@ -8,6 +8,7 @@
     "dev": "node server.js"
   },
   "dependencies": {
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "nodemon": "^3.1.0"
