--- a/AnPriX/frontend/package.json
+++ b/AnPriX/frontend/package.json
@@ -13,9 +13,10 @@
     "@mui/icons-material": "^7.3.2",
     "@mui/material": "^7.3.2",
     "framer-motion": "^11.18.2",
-  "next": "14.2.32",
+    "next": "14.2.32",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "react-icons": "^4.12.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.21",
